--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "phaser": "^3.90.0",
