--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "lucide-react": "^0.525.0",
     "phaser": "^3.90.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "react-toast": "^1.0.3",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
