--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Node.js dependencies
 frontend/node_modules/
 backend/node_modules/
+backend/uploads/
 */node_modules/
 
 # Python virtual environments
